# pokemon-battle-simulator

./: README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  celery_app.py  main.py  redis.py  settings.py  worker.py
backend/app/dtos/: battles.py
backend/app/routers/: battles.py  status.py  ws.py
backend/app/schemas/: battles.py  tasks.py
backend/app/services/: battle_engine.py  prompt_engine.py
backend/app/tasks/: __init__.py  battle_tasks.py  health_tasks.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/server/: useAllPokemon.ts
frontend/src/utils/: capitalize.ts
